<resources>
    <string name="app_name">Bitcoin Mining</string>
    <string name="text_under_logo_login">Create Your Account</string>
    <string name="hint_text_email">Email</string>
    <string name="hint_text_password_et">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_btn_sign_up">SIGN UP</string>
    <string name="text_or">OR</string>
    <string name="text_sign_in">Sign in with Google</string>
    <string name="text_bottom_login">У вас есть аккаунт?</string>
    <string name="text_bottom_sign_in">SIGN IN</string>
    <string name="text_sign_in_log">Sign In</string>
    <string name="btn_text_log_in">LOG IN</string>
    <string name="text_sign_in_bottom">У вас нет акаунта?</string>
    <string name="text_sign_up_bottom">SIGN UP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_connection_error">CONNECTION ERROR</string>
    <string name="text_check_conn">Проверьте соединение с интернетом</string>
    <string name="text_btn_reconnection">Переподключиться</string>
    <string name="text_btn_next">Продолжить</string>
    <string name="text_test">test</string>
    <string name="text_start_btn">Start</string>
    <string name="text_your_balance">Your Balance</string>
    <string name="text_satoshi">&#160;Satoshi</string>
    <string name="text_default_satoshi">Satoshi</string>
    <string name="text_btn_boost">BOOST</string>
    <string name="text_btn_boost_value">BOOST %1$d%%</string>
    <string name="text_btn_take_to_btc">TAKE BTC</string>
    <string name="text_content_progressBar">0%</string>
    <string name="text_server_1">SERVER 1</string>
    <string name="text_ping">Ping</string>
    <string name="text_value_ping_server1">12</string>
    <string name="text_ms">ms</string>
    <string name="process_progress">%1$d %%</string>
    <string name="text_server_2">SERVER 2</string>
    <string name="text_server_3">SERVER 3</string>
    <string name="text_server_4">SERVER 4</string>
    <string name="text_value_ping_server2">6</string>
    <string name="text_btc">&#160;BTC</string>
    <string name="text_value_ping_server4">10</string>
    <string name="text_value_ping_server3">25</string>
    <string name="text_error_registration">ошибка регистрации!</string>
    <string name="text_success_registration">Регистрация прошла успешно</string>
    <string name="text_error_empty_email">Поле Email не заполнено!</string>
    <string name="text_empty_fields">Не все поля заполнены!</string>
    <string name="error_passwords">Пароли не совпадают!</string>
    <string name="text_error_email">Поле Email некорректно</string>
    <string name="text_error_auth">Ошибка аутентификации!</string>
    <string name="text_not_found_user">Пользователь не найден!</string>
    <string name="text_after_start_btn">Вывести</string>
    <string name="text_start_mining">Майнинг запущен</string>
    <string name="text_error_start_mining">Майнинг не запущен</string>
    <string name="title_activity_quests">QuestsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="value_float_btc">%.8f</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_progress_string_up">64%</string>
    <string name="text_conclusion_balance_up">Для вывода необходимо достигнуть 100%</string>
    <string name="text_empty"> </string>
    <string name="text_tv_acceleration">Ускорение</string>
    <string name="text_dialog_boost">Для увеличения скорости необходимо посмотреть рекламу</string>
    <string name="text_btn_ok">OK</string>
    <string name="text_spec">Спецпредложение</string>
    <string name="text_btn_lets_go">перейти</string>
    <string name="text_cancellation">отмена</string>
    <string name="text_unique_offer">Уникальное приложение для заработка онлайн</string>
    <string name="text_change_server">смена сервера</string>
    <string name="text_ads_change_server">Для смены сервера необходимо посмотреть рекламу</string>
    <string name="text_take_btc">TAKE BTC</string>
    <string name="text_btn_quest_url">перейти</string>
    <string name="text_btn_quest_satoshi">%d Satoshi</string>
    <string name="text_btn_right_quest_var1">Получить</string>
    <string name="text_btn_right_quest_var2">Перейти</string>
    <string name="text_title_evr_quest">Ежедневный бонус</string>
    <string name="text_description_evr_quest">Заходите в игру каждый день\nПолучайте приятный бонус!</string>
    <string name="text_title_ref_quest">Приглашайте друзей</string>
    <string name="text_description_ref_quest">За каждого приглашенного друга\nвы будете получать вознаграждения</string>
    <string name="text_code_quest_daily">daily</string>
    <string name="text_code_quest_referal">referal</string>
    <string name="text_send_ref">Пригласить</string>
    <string name="text_delimiter">%s|</string>
    <string name="intent_share">Майни как я или даже лучше в приложении https://play.google.com/store/apps/details?id=%s, вводи мой реферальный код %s и получай сатоши”</string>
    <string name="text_top_linear_referal">Рефералы</string>
    <string name="text_your_ref_code">Your ref code</string>
    <string name="central_text_referal">Вы можете приглашать ваших друзей\n Без каких-либо ограничений\n Больше друзей, больше ваша прибыль от них!</string>
    <string name="text_referral_income">Доход с рефералов</string>
    <string name="text_count_ref">Всего рефералов</string>
    <string name="default_count_ref">0</string>
    <string name="text_your_referals">Ваши рефералы</string>
    <string name="text_list_title_fragment">Ваши рефералы</string>
    <string name="text_center_referal">Вы еще никого не пригласили…</string>
    <string name="text_title_activity_transaction">Вывод</string>
    <string name="text_btn_your_trans">Транзакции</string>
    <string name="text_balance_usdt">Получите %d USDT</string>
    <string name="text_name_mixer_wallet">Mixer Wallet</string>
    <string name="text_title_dialog_trans">Депозит код</string>
    <string name="text_desc_dialog_trans">Недостаточно средств</string>
    <string name="text_generate">Generated from mobile app = %1$s</string>
    <string name="text_not_money_trans">Для вывода не хватает</string>
    <string name="text_congratulation_trans">Поздравляем! Вы можете вывести вознаграждение</string>
    <string name="text_value_ustd_trans">Вы получите %.2f USDT</string>
    <string name="text_value_ustd">Получите %.2f USDT</string>
    <string name="text_congratuation_dialog_trans">Обязательно сохраните код! Он вам пригодится для получения вознаграждения!</string>
    <string name="text_save">Сохранить</string>
    <string name="share_mixer_wallet">https://play.google.com/store/apps/details?id=eu.gov.motherwallet</string>
    <string name="text_title_list_trans_activity">Транзакции</string>
    <string name="text_value_ustd_promocode">%1$s USDT</string>
    <string name="text_promo_used">Used</string>
    <string name="text_promo_not_used">Not used</string>
    <string name="text_promo_invalid">Invalid</string>
    <string name="text_toast_copy">Скопировано</string>
    <string name="text_title_info_activity">INFO</string>
    <string name="text_point">•</string>
    <string name="text_info_1">Для запуска майнинга нажмите кнопку:“START”</string>
    <string name="text_info_2"> После нажатия кнопки, каждую минуту вам будут начисляться Satoshi</string>
    <string name="text_info_3">Чтобы ускорить получение Satoshi нажмите кнопку: “BOOST” после просмотра рекламы вы получите ускорение. Ускорения можно получать многократно действие ускорения 8 часов</string>
    <string name="text_info_4">Выбирайте сервер с низким уровнем ping, чем меньше ping тем выше скорость</string>
    <string name="text_info_5">Нажмите кнопку “Take btc” чтобы получить больше вознаграждений</string>
    <string name="text_info_6">Нажмите кнопку “Вывести” чтобы перейти на экран вывода ВТС</string>
    <string name="text_info_7">Для повторного получения информации нажмите кнопку:</string>
    <string name="text_btn_ok_info">Понятно</string>
    <string name="text_accrual">Начисление</string>
    <string name="text_description_accrual">Вам начислено&#160;</string>
</resources>