<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:weightSum="4"
    android:background="@drawable/dialog_background">

    <ImageView
        android:id="@+id/img_black_cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/black_cross"
        android:layout_weight="1"
        android:paddingBottom="5dp"
        android:layout_gravity="end"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_spec"
        android:textColor="@color/color_text_acceleration"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_weight="1"
        android:paddingBottom="25dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_unique_offer"
        android:textColor="@color/color_text_acceleration"
        android:textSize="14sp"
        android:gravity="center"
        android:layout_weight="1"
        android:paddingBottom="25dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingStart="1dp"
        android:paddingEnd="1dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancellation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_btn_cancellation"
            android:layout_weight="1"
            android:text="@string/text_cancellation"
            android:textColor="@color/black" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_lets_go"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_btn_dialog"
            android:layout_weight="1"
            android:text="@string/text_btn_lets_go"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>