<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_weight="5"
    android:background="@drawable/dialog_background">

    <ImageView
        android:id="@+id/img_cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cross"
        android:layout_weight="1"
        android:paddingBottom="15dp"
        android:layout_gravity="end"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/full_metric_active"
        android:layout_weight="1"
        android:paddingBottom="15dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_change_server"
        android:textColor="@color/color_text_acceleration"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ads_change_server"
        android:textColor="@color/color_text_acceleration"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingBottom="15dp"
        android:layout_gravity="center_horizontal"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_btn_dialog"
        android:drawablePadding="20dp"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/text_btn_ok"
        android:textColor="@color/white"
        android:textStyle="bold" />
</LinearLayout>